# birds-eye

./: .gitignore  Cargo.toml  README.md
birdseye-common/: Cargo.toml
birdseye-common/src/: frontend.rs  lib.rs
birdseye-common/src/net/packets/: desereialize.rs  error.rs  mod.rs  util.rs
birdseye-frontend/: Cargo.toml  index.html  index.scss
birdseye-frontend/.sass-cache/dc96644c3ff17f16f3376a3e83bc150853e1075a/: index.scssc
birdseye-frontend/resources/: index.html  index.scss
birdseye-frontend/src/: lib.rs  main.rs  router.rs
birdseye-frontend/src/components/: home.rs  not_found.rs
birdseye-frontend/src/socket_worker/: in_msg.rs  mod.rs  out_msg.rs
birdseye-monitor/: Cargo.toml
birdseye-monitor/src/: main.rs
birdseye-monitor/src/client/: current_user.rs  mod.rs  process.rs
birdseye-monitor/src/config/: mod.rs  server.rs
birdseye-monitor/src/platform/: linux.rs  mod.rs  windows.rs
birdseye-runner/: Cargo.toml
birdseye-runner/src/: asset_compiler.rs  lib.rs  main.rs
birdseye-server/: Cargo.toml
birdseye-server/src/: main.rs
birdseye-server/src/be/: mod.rs  tui.rs
birdseye-server/src/be/client/: mod.rs
birdseye-server/src/config/: mod.rs  server.rs
