[package]
name = "birdseye-monitor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }

tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
birdseye-common = {path = "../birdseye-common"}

serde = { version = "*", features = ["derive"] }
toml = "*"

sysinfo = "0.24.5"
users = "0.11.0"

futures = "0.3.21"
