[package]
name = "birdseye-runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
warp = { version = "0.3.2", features = ['tls'] }
notify = "5.0.0-pre.15"
tokio = { version = "1.19.2", features = ["macros", "rt", "sync", "time"] }
futures-util = "0.3.21"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
futures = "0.3.21"
gloo-console = "0.2.1"
gloo-net = { version = "0.2.3", features = ["websocket"] }
web-sys = { version = "0.3.58", features = ["Window"] }
