[package]
name = "birdseye-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"
rustls-pemfile = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

serde = {version = "*", features = ["derive"]}
toml = "*"

birdseye-common = { path = "../birdseye-common"}
