[package]
name = "birdseye-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7", features = ["tls", "transport"] }
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-rustls = "0.23"
rustls-pemfile = "1"
futures = "0.3"
tower-http = { version = "0.3.3", features = ["add-extension", "util"] }
tower = "0.4.12"
hyper = "0.14"

tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

serde = { version = "*", features = ["derive"] }
toml = "*"


rand = "0.8.5"

birdseye-common = { path = "../birdseye-common" }
