[package]
name = "birdseye-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }

tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
toml = "0.5.9"

warp = { version = "0.3.2", features = ["tls", "compression"] }
futures-util = "0.3.21"

birdseye-common = { path = "../birdseye-common", features = ["full"] }
